--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,8 @@
     "        value = (hash1 + i * hash2) % size\n",
     "        hash_values.append(value)\n",
     "    return hash_values\"\"\"\n",
-    "def hashFunction(self, string, hash_count, size):\n",
+    "    \n",
+    "def hashFunction(string, size):\n",
     "    hash1 = hash(string)\n",
     "    hash2 = hash(str(hash1) + string)\n",
     "    value = (hash1 + 0 * hash2) % size\n",
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +363,7 @@
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(seed, element, self.hash_count, self.size) % self.size\n",
+    "            result = hashFunction(element, self.size) % self.size\n",
     "            self.bit_array[result] = 1\n",
     "        inserted = True\n",
     "        return inserted\n",
@@ -371,7 +372,7 @@
     "        found = True\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(seed, element, self.hash_count, self.size) % self.size\n",
+    "            result = hashFunction(element, self.size) % self.size\n",
     "            if self.bit_array[result] == 0:\n",
     "                found = False\n",
     "                break\n",
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,39 +430,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test1-mobydick.txt\n",
-      "Sequential Search total insert time: 0.000014 seconds\n",
-      "Sequential Search total search time: 0.001292 seconds\n",
-      "Binary Search Tree total insert time: 0.000007 seconds\n",
-      "Binary Search Tree total search time: 0.000042 seconds\n",
-      "Balanced Search Tree total insert time: 0.000008 seconds\n",
-      "Balanced Search Tree total search time: 0.000016 seconds\n",
-      "Bloom Filter total insert time: 0.000006 seconds\n",
-      "Bloom Filter total search time: 0.000019 seconds\n",
-      "\n",
-      "\n",
-      "test2-warpeace.txt\n",
-      "Sequential Search total insert time: 0.000012 seconds\n",
-      "Sequential Search total search time: 0.000676 seconds\n",
-      "Binary Search Tree total insert time: 0.000006 seconds\n",
-      "Binary Search Tree total search time: 0.000008 seconds\n",
-      "Balanced Search Tree total insert time: 0.000011 seconds\n",
-      "Balanced Search Tree total search time: 0.000006 seconds\n",
-      "Bloom Filter total insert time: 0.000006 seconds\n",
-      "Bloom Filter total search time: 0.000006 seconds\n",
-      "\n",
-      "\n",
-      "test3-dickens.txt\n",
-      "Sequential Search total insert time: 0.000032 seconds\n",
-      "Sequential Search total search time: 0.004069 seconds\n",
-      "Binary Search Tree total insert time: 0.000085 seconds\n",
-      "Binary Search Tree total search time: 0.000016 seconds\n",
-      "Balanced Search Tree total insert time: 0.000015 seconds\n",
-      "Balanced Search Tree total search time: 0.000010 seconds\n",
-      "Bloom Filter total insert time: 0.000010 seconds\n",
-      "Bloom Filter total search time: 0.000009 seconds\n",
-      "\n",
-      "\n"
+      "test1-mobydick.txt\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'testfiles\\\\\\\\test1-mobydick.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m file_list:\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(file)\n\u001b[0;32m---> 27\u001b[0m     current_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtestfiles\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m current_file:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m line\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'testfiles\\\\\\\\test1-mobydick.txt'"
      ]
     }
    ],
@@ -588,14 +569,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False positives: 0\n"
+     "ename": "TypeError",
+     "evalue": "hashFunction() takes 2 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 101\u001b[0m\n\u001b[1;32m     99\u001b[0m value \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;28mid\u001b[39m]\n\u001b[1;32m    100\u001b[0m bf_search_start_time \u001b[38;5;241m=\u001b[39m timeit\u001b[38;5;241m.\u001b[39mdefault_timer()\n\u001b[0;32m--> 101\u001b[0m \u001b[43mbf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearchElement\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    102\u001b[0m bf_search_end_time \u001b[38;5;241m=\u001b[39m timeit\u001b[38;5;241m.\u001b[39mdefault_timer()\n\u001b[1;32m    103\u001b[0m bf_search_time \u001b[38;5;241m=\u001b[39m bf_search_end_time \u001b[38;5;241m-\u001b[39m bf_search_start_time\n",
+      "Cell \u001b[0;32mIn[10], line 22\u001b[0m, in \u001b[0;36mBloomFilterSet.searchElement\u001b[0;34m(self, element)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# ADD YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m seed \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhash_count):\n\u001b[0;32m---> 22\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mhashFunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43melement\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhash_count\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbit_array[result] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     24\u001b[0m         found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: hashFunction() takes 2 positional arguments but 4 were given"
      ]
     }
    ],
@@ -816,7 +802,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -834,7 +820,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba35fb1a679a2b18afe276dc9e52956e1aafbed90aaf57dfd633ccfb24a25773"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
