--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -430,39 +430,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test1-mobydick.txt\n",
-      "Sequential Search total insert time: 0.000008 seconds\n",
-      "Sequential Search total search time: 0.000474 seconds\n",
-      "Binary Search Tree total insert time: 0.000003 seconds\n",
-      "Binary Search Tree total search time: 0.000008 seconds\n",
-      "Balanced Search Tree total insert time: 0.000003 seconds\n",
-      "Balanced Search Tree total search time: 0.000004 seconds\n",
-      "Bloom Filter total insert time: 0.000003 seconds\n",
-      "Bloom Filter total search time: 0.000004 seconds\n",
-      "\n",
-      "\n",
-      "test2-warpeace.txt\n",
-      "Sequential Search total insert time: 0.000012 seconds\n",
-      "Sequential Search total search time: 0.000367 seconds\n",
-      "Binary Search Tree total insert time: 0.000005 seconds\n",
-      "Binary Search Tree total search time: 0.000003 seconds\n",
-      "Balanced Search Tree total insert time: 0.000005 seconds\n",
-      "Balanced Search Tree total search time: 0.000003 seconds\n",
-      "Bloom Filter total insert time: 0.000004 seconds\n",
-      "Bloom Filter total search time: 0.000003 seconds\n",
-      "\n",
-      "\n",
-      "test3-dickens.txt\n",
-      "Sequential Search total insert time: 0.000018 seconds\n",
-      "Sequential Search total search time: 0.001574 seconds\n",
-      "Binary Search Tree total insert time: 0.000004 seconds\n",
-      "Binary Search Tree total search time: 0.000003 seconds\n",
-      "Balanced Search Tree total insert time: 0.000003 seconds\n",
-      "Balanced Search Tree total search time: 0.000003 seconds\n",
-      "Bloom Filter total insert time: 0.000003 seconds\n",
-      "Bloom Filter total search time: 0.000003 seconds\n",
-      "\n",
-      "\n"
+      "test1-mobydick.txt\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'testfiles\\\\\\\\test1-mobydick.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m file_list:\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(file)\n\u001b[0;32m---> 27\u001b[0m     current_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtestfiles\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m current_file:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m line\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'testfiles\\\\\\\\test1-mobydick.txt'"
      ]
     }
    ],
@@ -589,17 +569,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False positives: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import timeit\n",
     "\n",
@@ -720,17 +692,17 @@
     "bf2 = BloomFilterSet()\n",
     "\n",
     "# insert 500 integers in the Bloom Filter\n",
-    "for i in range(500):\n",
-    "    bf2.insertElement(str(i))\n",
+    "for data in BFdata:\n",
+    "    bf2.insertElement(str(BFdata))\n",
     "\n",
     "# Test the Bloom Filter with 1000 integers\n",
     "false_positives = 0\n",
-    "for i in range(1000):\n",
-    "    if i < 500:\n",
-    "        if not bf.searchElement(str(i)):\n",
+    "for data in BFdata:\n",
+    "    if data < '500':\n",
+    "        if not bf.searchElement(str(data)):\n",
     "            pass\n",
     "    else:\n",
-    "        if bf.searchElement(str(i)):\n",
+    "        if bf.searchElement(str(data)):\n",
     "            false_positives += 1\n",
     "\n",
     "print(f\"False positives: {false_positives}\") \n",
