--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,31 @@
     "    for element in test_dataset:\n",
     "        if self.searchElement(element):\n",
     "            false_positives += 1\n",
-    "    return false_positives / len(test_dataset)"
+    "    return false_positives / len(test_dataset)\n",
+    "\n",
+    "# Helper Function to insert words stored in given words_list to a given data structure, during real data test.\n",
+    "def test_insert(algorithms, words_list):\n",
+    "    for word in words_list:\n",
+    "        algorithms.insertElement(word)\n",
+    "\n",
+    "# Helper Function to search words stored in search_words_list in a given data structure, during real data test.\n",
+    "def test_search(algorithms):\n",
+    "    for word in search_words_list:\n",
+    "        algorithms.searchElement(word)\n",
+    "\n",
+    "# Helper Function to insert words stored in given words_list to prepare the given data structure for testing the insert time when the data structure already have an certain amount of data, during Synthetic Test.\n",
+    "def prepare_test_insert(algorithms, words_list, limit):\n",
+    "    for word_index in range(limit):\n",
+    "        algorithms.insertElement(words_list[word_index])\n",
+    "\n",
+    "# Helper Function to insert the last word stored in words_list in a given data structure, during Synthetic Test.\n",
+    "def test_insert_Synthetic_Test(algorithms, words_list, index_word_test):\n",
+    "    algorithms.insertElement(words_list[index_word_test])\n",
+    "\n",
+    "# Helper Function to search words stored in words_list in a given data structure, during Synthetic Test.\n",
+    "def test_total_search_Synthetic_Test(algorithms, words_list):\n",
+    "    for word in words_list:\n",
+    "        algorithms.searchElement(word)"
    ]
   },
   {
@@ -132,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,25 +455,25 @@
      "output_type": "stream",
      "text": [
       "test1:\n",
-      "Sequential Search total insert time: 10.85253439983353 seconds\n",
-      "Sequential Search total search time: 0.2856450998224318 seconds\n",
-      "Binary Search Tree total insert time: 0.5241820001974702 seconds\n",
-      "Binary Search Tree total search time: 0.0019842996262013912 seconds\n",
-      "Balanced Search Tree total insert time: 0.5636499999091029 seconds\n",
-      "Balanced Search Tree total search time: 0.0014055999927222729 seconds\n",
-      "Bloom Filter total insert time: 2.196078199893236 seconds\n",
-      "Bloom Filter total search time: 0.005100099835544825 seconds\n",
+      "Sequential Search total insert time: 9.599107000045478 seconds\n",
+      "Sequential Search total search time: 0.26865049963817 seconds\n",
+      "Binary Search Tree total insert time: 0.4858300001360476 seconds\n",
+      "Binary Search Tree total search time: 0.00210379995405674 seconds\n",
+      "Balanced Search Tree total insert time: 0.5419491003267467 seconds\n",
+      "Balanced Search Tree total search time: 0.0012491000816226006 seconds\n",
+      "Bloom Filter total insert time: 1.908623999916017 seconds\n",
+      "Bloom Filter total search time: 0.004590800032019615 seconds\n",
       "\n",
       "\n",
       "test2:\n",
-      "Sequential Search total insert time: 19.312011800240725 seconds\n",
-      "Sequential Search total search time: 0.3174239997752011 seconds\n",
-      "Binary Search Tree total insert time: 1.3722150004468858 seconds\n",
-      "Binary Search Tree total search time: 0.002388200256973505 seconds\n",
-      "Balanced Search Tree total insert time: 1.1934756999835372 seconds\n",
-      "Balanced Search Tree total search time: 0.0013227001763880253 seconds\n",
-      "Bloom Filter total insert time: 5.452361700125039 seconds\n",
-      "Bloom Filter total search time: 0.005151000339537859 seconds\n",
+      "Sequential Search total insert time: 17.37725709984079 seconds\n",
+      "Sequential Search total search time: 0.27892439998686314 seconds\n",
+      "Binary Search Tree total insert time: 1.2462218003347516 seconds\n",
+      "Binary Search Tree total search time: 0.0015666000545024872 seconds\n",
+      "Balanced Search Tree total insert time: 1.1509781000204384 seconds\n",
+      "Balanced Search Tree total search time: 0.001165300142019987 seconds\n",
+      "Bloom Filter total insert time: 5.131281899753958 seconds\n",
+      "Bloom Filter total search time: 0.004646600224077702 seconds\n",
       "\n",
       "\n",
       "test3:\n"
@@ -462,11 +486,11 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 134\u001b[0m\n\u001b[0;32m    132\u001b[0m \u001b[39m# test3 Sequential Search =====================#\u001b[39;00m\n\u001b[0;32m    133\u001b[0m ss3 \u001b[39m=\u001b[39m SequentialSearchSet()\n\u001b[1;32m--> 134\u001b[0m ss3_insert_time_test3 \u001b[39m=\u001b[39m timeit\u001b[39m.\u001b[39;49mtimeit(\u001b[39m'\u001b[39;49m\u001b[39mtest_insert(ss3, test3_words_list)\u001b[39;49m\u001b[39m'\u001b[39;49m, number \u001b[39m=\u001b[39;49m \u001b[39m1\u001b[39;49m, \u001b[39mglobals\u001b[39;49m \u001b[39m=\u001b[39;49m \u001b[39mglobals\u001b[39;49m())\n\u001b[0;32m    135\u001b[0m ss_insert_time_data\u001b[39m.\u001b[39mappend(ss3_insert_time_test3)\n\u001b[0;32m    136\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSequential Search total insert time: \u001b[39m\u001b[39m{\u001b[39;00mss3_insert_time_test3\u001b[39m}\u001b[39;00m\u001b[39m seconds\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[9], line 122\u001b[0m\n\u001b[0;32m    120\u001b[0m \u001b[39m# test3 Sequential Search =====================#\u001b[39;00m\n\u001b[0;32m    121\u001b[0m ss3 \u001b[39m=\u001b[39m SequentialSearchSet()\n\u001b[1;32m--> 122\u001b[0m ss3_insert_time_test3 \u001b[39m=\u001b[39m timeit\u001b[39m.\u001b[39;49mtimeit(\u001b[39m'\u001b[39;49m\u001b[39mtest_insert(ss3, test3_words_list)\u001b[39;49m\u001b[39m'\u001b[39;49m, number \u001b[39m=\u001b[39;49m \u001b[39m1\u001b[39;49m, \u001b[39mglobals\u001b[39;49m \u001b[39m=\u001b[39;49m \u001b[39mglobals\u001b[39;49m())\n\u001b[0;32m    123\u001b[0m ss_insert_time_data\u001b[39m.\u001b[39mappend(ss3_insert_time_test3)\n\u001b[0;32m    124\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSequential Search total insert time: \u001b[39m\u001b[39m{\u001b[39;00mss3_insert_time_test3\u001b[39m}\u001b[39;00m\u001b[39m seconds\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\lihsi\\AppData\\Local\\Programs\\Python\\Python310\\lib\\timeit.py:234\u001b[0m, in \u001b[0;36mtimeit\u001b[1;34m(stmt, setup, timer, number, globals)\u001b[0m\n\u001b[0;32m    231\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtimeit\u001b[39m(stmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpass\u001b[39m\u001b[39m\"\u001b[39m, setup\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpass\u001b[39m\u001b[39m\"\u001b[39m, timer\u001b[39m=\u001b[39mdefault_timer,\n\u001b[0;32m    232\u001b[0m            number\u001b[39m=\u001b[39mdefault_number, \u001b[39mglobals\u001b[39m\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m    233\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Convenience function to create Timer object and call timeit method.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 234\u001b[0m     \u001b[39mreturn\u001b[39;00m Timer(stmt, setup, timer, \u001b[39mglobals\u001b[39;49m)\u001b[39m.\u001b[39;49mtimeit(number)\n",
       "File \u001b[1;32mc:\\Users\\lihsi\\AppData\\Local\\Programs\\Python\\Python310\\lib\\timeit.py:178\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    176\u001b[0m gc\u001b[39m.\u001b[39mdisable()\n\u001b[0;32m    177\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 178\u001b[0m     timing \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49minner(it, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimer)\n\u001b[0;32m    179\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m    180\u001b[0m     \u001b[39mif\u001b[39;00m gcold:\n",
       "File \u001b[1;32m<timeit-src>:6\u001b[0m, in \u001b[0;36minner\u001b[1;34m(_it, _timer)\u001b[0m\n",
-      "Cell \u001b[1;32mIn[26], line 28\u001b[0m, in \u001b[0;36mtest_insert\u001b[1;34m(algorithms, words_list)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_insert\u001b[39m(algorithms, words_list):\n\u001b[0;32m     27\u001b[0m     \u001b[39mfor\u001b[39;00m word \u001b[39min\u001b[39;00m words_list:\n\u001b[1;32m---> 28\u001b[0m         algorithms\u001b[39m.\u001b[39minsertElement(word)\n",
+      "Cell \u001b[1;32mIn[8], line 44\u001b[0m, in \u001b[0;36mtest_insert\u001b[1;34m(algorithms, words_list)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_insert\u001b[39m(algorithms, words_list):\n\u001b[0;32m     43\u001b[0m     \u001b[39mfor\u001b[39;00m word \u001b[39min\u001b[39;00m words_list:\n\u001b[1;32m---> 44\u001b[0m         algorithms\u001b[39m.\u001b[39minsertElement(word)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -494,18 +518,6 @@
     "            test2_words_list = current_file.read().split()\n",
     "        else:\n",
     "            test3_words_list = current_file.read().split()\n",
-    "\n",
-    "# Function to insert words stored in given words_list to a given data structure.\n",
-    "\n",
-    "def test_insert(algorithms, words_list):\n",
-    "    for word in words_list:\n",
-    "        algorithms.insertElement(word)\n",
-    "\n",
-    "# Function to search words stored in search_words_list in a given data structure.\n",
-    "\n",
-    "def test_search(algorithms):\n",
-    "    for word in search_words_list:\n",
-    "        algorithms.searchElement(word)\n",
     "\n",
     "# The following lists store the results of insert and search time of different files.\n",
     "# ss is SequentialSearch\n",
@@ -640,30 +652,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import timeit\n",
     "\n",
     "# ADD YOUR TEST CODE HERE TO WORK ON SYNTHETIC DATA\n",
-    "\n",
-    "# Function to insert words stored in given words_list to prepare the given data structure for testing the insert time when the data structure already have an certain amount of data, during Synthetic Test.\n",
-    "\n",
-    "def prepare_test_insert(algorithms, words_list, limit):\n",
-    "    for word_index in range(limit):\n",
-    "        algorithms.insertElement(words_list[word_index])\n",
-    "\n",
-    "# Function to insert the last word stored in words_list in a given data structure, during Synthetic Test.\n",
-    "\n",
-    "def test_insert_Synthetic_Test(algorithms, words_list, index_word_test):\n",
-    "    algorithms.insertElement(words_list[index_word_test])\n",
-    "\n",
-    "# Function to search words stored in words_list in a given data structure, during Synthetic Test.\n",
-    "\n",
-    "def test_total_search_Synthetic_Test(algorithms, words_list):\n",
-    "    for word in words_list:\n",
-    "        algorithms.searchElement(word)\n",
     "\n",
     "SyntheticTest = TestDataGenerator()\n",
     "\n",
@@ -679,14 +674,14 @@
     "bf_average_search_time_data_for_synthetic = []\n",
     "\n",
     "# Test\n",
-    "max_size = 10000\n",
+    "max_size = 1000\n",
     "for num_data in range(1, max_size + 1):\n",
     "    data = SyntheticTest.generateData(num_data)\n",
     "    ss = SequentialSearchSet()\n",
     "    bst = BinarySearchTreeSet()\n",
     "    bal = BalancedSearchTreeSet()\n",
     "    bf = BloomFilterSet()\n",
-    "    print(num_data)\n",
+    "    # print(num_data)\n",
     "    if num_data == 1:\n",
     "        # Sequential search\n",
     "        ss_insert_time_with_this_data_size = timeit.timeit('test_insert_Synthetic_Test(ss, data, num_data - 1)', number = 1, globals = globals())\n",
@@ -855,18 +850,18 @@
     "# bf2 = BloomFilterSet()\n",
     "\n",
     "# insert 500 integers in the Bloom Filter\n",
-    "for data in BFdata:\n",
-    "    bf2.insertElement(str(BFdata))\n",
+    "# for data in BFdata:\n",
+    "#     bf2.insertElement(str(BFdata))\n",
     "\n",
-    "# Test the Bloom Filter with 1000 integers\n",
-    "false_positives = 0\n",
-    "for data in BFdata:\n",
-    "    if data < '500':\n",
-    "        if not bf.searchElement(str(data)):\n",
-    "            pass\n",
-    "    else:\n",
-    "        if bf.searchElement(str(data)):\n",
-    "            false_positives += 1\n",
+    "# # Test the Bloom Filter with 1000 integers\n",
+    "# false_positives = 0\n",
+    "# for data in BFdata:\n",
+    "#     if data < '500':\n",
+    "#         if not bf.searchElement(str(data)):\n",
+    "#             pass\n",
+    "#     else:\n",
+    "#         if bf.searchElement(str(data)):\n",
+    "#             false_positives += 1\n",
     "\n",
     "# # Print results\n",
     "# # for num_data_have in range(num_data):\n",
