New hash function for Bloom Filter

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -108,11 +108,11 @@
     "        hash_values.append(value)\n",
     "    return hash_values\"\"\"\n",
     "    \n",
-    "def hashFunction(string, size):\n",
+    "\"\"\"def hashFunction(string, size):\n",
     "    hash1 = hash(string)\n",
     "    hash2 = hash(str(hash1) + string)\n",
     "    value = (hash1 + 0 * hash2) % size\n",
-    "    return value\n",
+    "    return value\"\"\"\n",
     "\n",
     "# Helper Function to calculate false postives in bloom filter\n",
     "def falsePositiveRate(self, test_dataset):\n",
@@ -374,32 +374,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
     "class BloomFilterSet(AbstractSet):\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self, size=191701, hash_count=13):\n",
     "        # ADD YOUR CODE HERE\n",
-    "        self.size = 191701\n",
-    "        self.hash_count = 13\n",
-    "        self.bit_array = [0] * self.size\n",
+    "        self.size = size\n",
+    "        self.hash_count = hash_count\n",
+    "        self.bit_array = [False] * size\n",
+    "        self.hash_seeds = self\n",
+    "\n",
+    "    def _generate_hash_seeds(self):\n",
+    "        # Generate a set of random hash seeds using a fixed seed value\n",
+    "        # This ensures that the same set of seeds is used every time\n",
+    "        hash_seeds = []\n",
+    "        random = random(42)\n",
+    "        for i in range(self.hash_count):\n",
+    "            hash_seeds.append(random.randint(0, 2**32-1))\n",
+    "        return hash_seeds\n",
+    "\n",
+    "    def _hash_string(self, string, seed):\n",
+    "    # Compute a hash value for the given string using the given seed\n",
+    "    # This implementation uses the FNV-1a hash function\n",
+    "        fnv_offset_basis = 2166136261\n",
+    "        fnv_prime = 16777619\n",
+    "        hash_value = fnv_offset_basis ^ seed\n",
+    "        for char in string:\n",
+    "            hash_value = (hash_value ^ ord(char)) * fnv_prime\n",
+    "        return hash_value\n",
+    "\n",
+    "    def _get_hashes(self, element):\n",
+    "    # Generate a set of hash values for the given element\n",
+    "    # using the precomputed set of hash seeds\n",
+    "        hashes = []\n",
+    "        for seed in self.hash_seeds:\n",
+    "            hash_value = self._hash_string(element, seed)\n",
+    "            hash_value = hash_value % self.size\n",
+    "            hashes.append(hash_value)\n",
+    "        return hashes\n",
     "\n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(element, self.size) % self.size\n",
-    "            self.bit_array[result] = 1\n",
+    "        for hash_value in self._get_hashes(element):\n",
+    "            # Set the corresponding bit in the bit array to True\n",
+    "            self.bit_array[hash_value] = True\n",
     "        inserted = True\n",
     "        return inserted\n",
     "\n",
     "    def searchElement(self, element):\n",
     "        found = True\n",
     "        # ADD YOUR CODE HERE\n",
-    "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(element, self.size) % self.size\n",
-    "            if self.bit_array[result] == 0:\n",
-    "                found = False\n",
-    "                break\n",
-    "        return found"
+    "        for hash_value in self._get_hashes(element):\n",
+    "        # Check if the corresponding bit in the bit array is True\n",
+    "            if not self.bit_array[hash_value]:\n",
+    "                return False\n",
+    "        return True"
    ]
   },
   {
